@@ -1,7 +1,15 @@
+2005-11-11  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gui/gdmsetup.c: (install_theme_file), (theme_install_response),
+	  (install_new_theme), (get_file_list_from_uri_list),
+	  (theme_list_drag_data_received), (setup_local_themed_settings),
+	  (setup_remote_themed_settings):  Add drag and drop support for
+	  new themes.
+
 2005-11-11  Brian Cameron  <brian.cameron@sun.com>
 
         * configure.ac: Update check for socklen_t so it
-          includes sys/socket.h.  Some platforms define
+          includes sys/socket.h.  Some BSD platforms define
           socklen_t there.  Patch provided by
           dmacks@netspace.org.  Fixes bug #320930.
 
